# m-wave

./: .env  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  pyproject.toml  setup_cursor_dev.ps1
.github/workflows/: ci.yml
rust-microservice/: Cargo.toml
server/: main.py
server/core/: azure_automation.py  azure_integration.py  data_processor.py  prediction.py  serial_manager.py
tests/: test_prediction.py
